--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,16 @@ spring:
     password: 123
     driver-class-name: com.mysql.jdbc.Driver
 
+  redis:
+    host: 127.0.0.1
+    port: 6379
+
 server:
   servlet:
     context-path: /sport
+
+
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  config-location: classpath:mybatis-config.xml
