--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
+    jedis:
+      pool:
+        max-active: 1000
+        min-idle: 100
+#        max-wait: 100ms
 
 server:
   servlet:
